--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,22 @@
     -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
 		<title>Minesweeper</title>
+		<meta name="title" content="Minesweeper" />
+		<meta name="description" content="Minesweeper game with randomwalk implementation" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://dadangdut33.github.io/minesweeper-randomwalk/" />
+		<meta property="og:title" content="Minesweeper" />
+		<meta property="og:description" content="Minesweeper game with randomwalk implementation" />
+		<meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://dadangdut33.github.io/minesweeper-randomwalk/" />
+		<meta property="twitter:title" content="Minesweeper" />
+		<meta property="twitter:description" content="Minesweeper game with randomwalk implementation" />
+		<meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" />
 	</head>
 	<body>
 		<noscript> You need to enable JavaScript to run this app. </noscript>
